Revert "add index html"
This reverts commit 2fc78732542f93d697309199b35e5061f425730c.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>26/09/24</title>
 </head>
 <body>
-    
+    <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam et reprehenderit ad, animi similique sint ipsa excepturi. Laboriosam impedit sequi similique quae. Repellat, rerum numquam! Tempora ipsam ipsa consequuntur vero?</p>
 </body>
 </html>
